Mejoras en documentación. Apartados 5 y 7 de memoria.

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -714,3 +714,163 @@ journal = {Neural Comput.},
   	howpublished = {\url{https://es.wikipedia.org/wiki/Capitalizaci%C3%B3n_de_mercado}},
   	note = {Online; Accedido el 24-May-2024},
 }
+
+@misc{ wiki:homocedasticidad,
+  	author = {Wikipedia},
+  	title = {\emph{Homocedasticidad}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Homocedasticidad}},
+  	note = {Online; Accedido el 24-May-2024},
+}
+
+@misc{ wiki:api,
+  	author = {Wikipedia},
+  	title = {\emph{API}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/API}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ wiki:issue,
+  	author = {Wikipedia},
+  	title = {\emph{Issue}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/Issue}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ wiki:burndown,
+  	author = {Wikipedia},
+  	title = {\emph{Burndown chart}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Burndown_chart}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:django_doc,
+  	author = {Django developers},
+  	title = {\emph{Django documentation}},
+  	year = {2024},
+  	howpublished = {\url{https://docs.djangoproject.com/en/5.0/}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:django_fatz,
+  	author = {Fazt},
+  	title = {\emph{Django, Curso de Django para Principiantes}},
+  	year = {2023},
+  	howpublished = {\url{https://www.youtube.com/watch?v=T1intZyhXDU}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:django_full_course,
+  	author = {Django Full Course},
+  	title = {\emph{Django Full Course}},
+  	year = {2023},
+  	howpublished = {\url{https://www.youtube.com/@djangofullcourse1171}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:jinja_doc,
+  	author = {Pallets},
+  	title = {\emph{Jinja}},
+  	year = {2023},
+  	howpublished = {\url{https://jinja.palletsprojects.com/en/3.0.x/}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:financial_engineering,
+  	author = {The Lazy Programmer Team},
+  	title = {\emph{Financial Engineering and Artificial Intelligence in Python}},
+  	year = {2024},
+  	howpublished = {\url{https://www.udemy.com/course/ai-finance/}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:efficient_frontier,
+  	author = {QuantPy},
+  	title = {\emph{Efficient Frontier}},
+  	year = {2021},
+  	howpublished = {\url{https://www.youtube.com/playlist?list=PLqpCwow11-OooQGB3vuiCdsRLQ5i-6AEH}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:portfolio_theory_mit,
+  	author = {Dr. Peter Kempthorne},
+  	title = {\emph{Lecture 14: Portfolio Theory}},
+  	year = {2021},
+  	howpublished = {\url{https://ocw.mit.edu/courses/18-s096-topics-in-mathematics-with-applications-in-finance-fall-2013/resources/lecture-14-portfolio-theory/}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:mpt_python_medium,
+  	author = {Julian Chang},
+  	title = {\emph{Modern Portfolio Theory with Python}},
+  	year = {2021},
+  	howpublished = {\url{https://medium.com/@changjulian17/modern-portfolio-theory-with-python-f33c9f517cd4}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:yfinance,
+  	author = {Ran Aroussi},
+  	title = {\emph{yFinance}},
+  	year = {2021},
+  	howpublished = {\url{https://pypi.org/project/yfinance/}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:yfinance_github,
+  	author = {Ran Aroussi},
+  	title = {\emph{yFinance}},
+  	year = {2024},
+  	howpublished = {\url{https://github.com/ranaroussi/yfinance}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:django_routers,
+  	author = {Django},
+  	title = {\emph{Django multi routing}},
+  	year = {2024},
+  	howpublished = {\url{https://docs.djangoproject.com/en/5.0/topics/db/multi-db/#topics-db-multi-db-routing}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:walk_forward_code,
+  	author = {Jason Bronwlee},
+  	title = {\emph{How to Create an ARIMA Model for Time Series Forecasting in Python}},
+  	year = {2024},
+  	howpublished = {\url{https://machinelearningmastery.com/arima-for-time-series-forecasting-with-python/}},
+  	note = {Online; Accedido el 01-Jun-2024},
+}
+
+@misc{ online:FAT_read_docs,
+  	author = {Rodrigo Merino},
+  	title = {\emph{FAT: Financial Analysis Tool’s documentation}},
+  	year = {2024},
+  	howpublished = {\url{https://fat.readthedocs.io/es/latest/}},
+  	note = {Online; Accedido el 01-Jun-2024},
+}
+
+@misc{ wiki:lstm,
+  	author = {Wikipedia},
+  	title = {\emph{Long short-term memory}},
+  	year = {2024},
+  	howpublished = {\url{https://en.wikipedia.org/wiki/Long_short-term_memory}},
+  	note = {Online; Accedido el 31-May-2024},
+}
+
+@misc{ online:fbprophet,
+  	author = {Mera developers},
+  	title = {\emph{Prophet}},
+  	year = {2024},
+  	howpublished = {\url{https://facebook.github.io/prophet/}},
+  	note = {Online; Accedido el 01-Jun-2024},
+}
+
+@misc{ wiki:analisis_fundamental,
+  	author = {Wikipedia},
+  	title = {\emph{Análisis fundamental}},
+  	year = {2024},
+  	howpublished = {\url{https://es.wikipedia.org/wiki/An%C3%A1lisis_fundamental}},
+  	note = {Online; Accedido el 01-Jun-2024},
+}
