--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -479,7 +479,7 @@ así como el riesgo que estamos dispuestos a asumir y si la información de la q
 disponemos es suficiente. 
  
 Para abordar algunos de estos retos, este trabajo propone una herramienta digital que recopila 
-información técnica y fundamental de empresas y sus productos cotizados, así como noticias 
+información técnica de empresas y sus productos cotizados, así como noticias 
 relacionadas con algunos de los índices de referencia más relevantes. Esta herramienta 
 presenta datos de forma agregada y permite realizar la comparación evolutiva - de precios
 de cierre de mercado - con el sector de referencia de una empresa cotizada o entre diferentes 
@@ -487,8 +487,8 @@ valores de distintos mercados.
 
 Adicionalmente, en este trabajo se aporta una visión diferente a las webs de mercados financieros, 
 permitiendo hacer uso de algunas utilidades poco comunes, como son la opción de hacer un análisis 
-gráfico de correlación entre las cotizaciones de cuatro bolsas mundiales o la experimentación 
-con predicción automática sobre series temporales, a través de \emph{ARIMA} o redes \emph{LSTM}. 
+gráfico de rentabilidad-riesgo para los valores que tengamos en cartera, la experimentación 
+con predicción automática sobre series temporales a través de modelos \emph{ARIMA} o herramientas de \emph{trading} algorítmico basado en técnicas de cruce de medias y en \emph{machine learning}. 
 
 Por otro lado, esta herramienta permite llevar el control de una cartera de inversión - realizando 
 cambio de divisa automático a euros en los casos necesarios - y disponer de una lista de seguimiento, 
@@ -500,8 +500,8 @@ utilizada de forma local, en \url{https://github.com/rmt0009alu/FAT}.
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
-Django, SQLite, análisis financiero, noticias y RSS, seguimiento de cartera, \emph{forecasting} de 
-series temporales. 
+Django, SQLite, análisis financiero, diversificación de cartera, \emph{forecasting} de 
+series temporales, \emph{trading} algorítmico.
 \end{abstract}
 
 \clearpage
@@ -520,20 +520,18 @@ analysis - using market closing prices - with the reference sector of a listed c
 different stocks from different markets.
 
 Additionally, this work offers a different perspective on financial market websites, allowing the use of 
-some uncommon utilities, such as the option to perform graphical correlation analysis between the stock quotes 
-from four world stock exchanges, or experimentation with automatic prediction on time series, through 
-ARIMA or LSTM networks.
+some uncommon utilities, such as the option to perform a graphical analysis of risk-return for securities in our portfolio, experimentation with automatic prediction on time series through \emph{ARIMA} models or algorithmic \emph{trading} tools based on mean crossing techniques and \emph{machine learning}.
 
 On the other hand, this tool allows for the control of an investment portfolio - including automatic currency 
 conversion to euros when necessary - and a watchlist with real closing prices on a daily basis.
 
-The tool is available at \url{http://takeiteasy.pythonanywhere.com/} or, for local use, at
+The tool is available at \url{http://takeiteasy.pythonanywhere.com/} or, to be used locally, in
 \url{https://github.com/rmt0009alu/FAT}.
 \end{abstract}
 
 \renewcommand*\abstractname{Keywords}
 \begin{abstract}
-Django, SQLite, financial analysis, news and RSS, investment portfolio, time series \emph{forecasting}. 
+Django, SQLite, financial analysis, portfolio diversification, time series \emph{forecasting}, algorithmic \emph{trading}.
 \end{abstract}
 
 \clearpage
