--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -19,8 +19,8 @@ Siguiendo las valiosas recomendaciones de Benjamin Graham \citep{book:Inversor_i
  para ayudar a los inversores a formar una cartera bien diversificada, teniendo 
  en cuenta diferentes divisas y mercados; y se aportan algunas herramientas de 
  análisis poco frecuentes en otras plataformas web \citep{online:MarketScreener,online:Investing,online:Bloomberg}, 
- como puede ser el análisis visual de correlaciones entre valores o la 
- comparación gráfica con el sector de referencia, entre otros. 
+ como puede ser el análisis visual de correlaciones entre valores y la 
+ comparación gráfica con sectores de referencia, entre otros. 
  
 Por otro lado, según el Plan de Educación Financiera 2022-2025 \citep{report:cnmv_informe} 
  de la CNMV \citep{online:cnmv_portal} y del Banco de España \citep{online:bde}, existe un consenso 
@@ -29,7 +29,7 @@ Por otro lado, según el Plan de Educación Financiera 2022-2025 \citep{report:c
  manera experimental, se introduce al usuario en la utilización de modelos para análisis 
  de series temporales, con la intención de aportar herramientas adicionales a su \textit{backup} 
  financiero. Concretamente, se da acceso al uso de modelos ARIMA \citep{wiki:ARIMA} 
- y de redes LSTM \citep{10.1162/neco.1997.9.8.1735}. 
+ y de estrategias basadas en \emph{machine learning}. Además, se ofrece una herramienta de control de carteras para que el usuario poder hacer su propio análisis de rentabilidad-riesgo y se aportan soluciones que favorecen la diversificación. 
 
 
 \section{Estructura de la memoria}\label{estructura-de-la-memoria}
@@ -107,6 +107,8 @@ Además, los siguientes recursos están accesibles a través de internet:
   \textbf{Página web} del proyecto \citep{online:FAT_web}.
 \item
   \textbf{Repositorio} del proyecto \citep{online:FAT_repo}.
+\item
+  \textbf{Documentación del código} del proyecto \citep{online:FAT_read_docs}.
 \end{itemize}
 
 
