--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -23,7 +23,9 @@ Facilitar la interpretación de los datos recogidos mediante
  representaciones gráficas.
 \item
 Dar acceso a información extra mediante el análisis de series temporales con
- modelos y redes neuronales. 
+ modelos especializados. 
+\item
+Introducir a los usuarios en la experimentación con técnicas de \emph{trading} algorítmico.
 \end{itemize}
 
 \section{Objetivos de carácter técnico}\label{objetivos_tecnicos}
@@ -58,7 +60,7 @@ Aplicar la metodología ágil Scrum junto con TDD (\emph{Test Driven
  Development}) en los apartados que sea posible a lo largo del desarrollo
  del software. 
 \item
-Realizar test unitarios, de integración y de interfaz.
+Cubrir todo el código con tests, para mejorar la calidad del producto final. 
 \item
 Utilizar Zube como herramienta de gestión de proyectos.
 \item
