--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -8,7 +8,7 @@ At its core, Graham's philosophy emphasizes the importance of investing with a m
     publisher = {Deusto, Grupo Planeta},
     author = {Graham, Benjamin},
     edition = {10th},
-    month = sept,
+    month = sep,
     year = {2007},
     originalyear = {1949}
 }
@@ -441,11 +441,11 @@ journal = {Neural Comput.},
 }
 
 @misc{ online:yfinance,
-  	author = {Ran Aroussi},
-  	title = {\emph{yFinance}},
-  	year = {2024},
-  	howpublished = {\url{https://pypi.org/project/yfinance/}},
-  	note = {Online; Accedido el 22-Abr-2024},
+  author = {Ran Aroussi},
+  title = {yFinance},
+  year = {2024},
+  howpublished = {\url{https://pypi.org/project/yfinance/}},
+  note = {Online; accedido el 22-Abr-2024}
 }
 
 @misc{ online:news_api,
@@ -811,14 +811,6 @@ journal = {Neural Comput.},
   	note = {Online; Accedido el 31-May-2024},
 }
 
-@misc{ online:yfinance,
-  	author = {Ran Aroussi},
-  	title = {\emph{yFinance}},
-  	year = {2021},
-  	howpublished = {\url{https://pypi.org/project/yfinance/}},
-  	note = {Online; Accedido el 31-May-2024},
-}
-
 @misc{ online:yfinance_github,
   	author = {Ran Aroussi},
   	title = {\emph{yFinance}},
@@ -873,4 +865,124 @@ journal = {Neural Comput.},
   	year = {2024},
   	howpublished = {\url{https://es.wikipedia.org/wiki/An%C3%A1lisis_fundamental}},
   	note = {Online; Accedido el 01-Jun-2024},
+}
+
+@book{ book:libertad_financiera,
+	title = {Inversión: Claves para alcanzar la libertad financiera},
+    isbn = {979-8575532361},
+    abstract = {Este libro es una guía completa sobre cómo buscar solcuiones a los problemas de la inflación, a través de un viaje en el que se van aprendiendo conceptos desde lo básico hasta aspectos más complejos. Se centra en buscar las inversiones adecuadas para cada perfil y en buscar caminos para llegar a la independencia financiera},
+    language = {Spanish},
+    publisher = {El club inversor},
+    author = {Redondo, Andrea},
+    edition = {1st},
+    month = dec,
+    year = {2020},
+}
+
+@article{paper:ML_Asset_Managers,
+  author = {Marcos López de Prado},
+  title = {Machine Learning for Asset Managers},
+  journal = {Quantitative Finance},
+  year = {2018}
+}
+
+@article{paper:Deep_Learning_Review,
+  author = {M. Roondiwala and H. Patel and K. Varma},
+  title = {Financial Time Series Forecasting with Deep Learning: A Systematic Literature Review: 2005-2019},
+  journal = {arXiv},
+  year = {2019},
+  eprint = {1909.11505}
+}
+
+@article{paper:Deep_Portfolios,
+  author = {David Koch and Liang Zhang and Jürgen Gall},
+  title = {Deep Learning for Finance: Deep Portfolios},
+  journal = {Journal of Financial Data Science},
+  year = {2019},
+  pages = {42--56}
+}
+
+@article{paper:Empirical_Stock_India,
+  author = {Vijayalakshmi Ravi and P. A. Vijaya},
+  title = {An Empirical Study on Predicting Stock Prices in the Indian Stock Market Using Machine Learning Techniques},
+  journal = {Procedia Computer Science},
+  year = {2019},
+  pages = {1155--1160}
+}
+
+@article{paper:Technical_Analysis_ML,
+  author = {Christian L. Dunis and Apostolos Karathanasopolous and George Sermpinis and Konstantinos Theofilatos and John Keane},
+  title = {Technical Analysis and Machine Learning: A Systematic Review},
+  journal = {European Journal of Operational Research},
+  year = {2016},
+  pages = {229--241}
+}
+
+@article{paper:NN_Algorithmic_Trading,
+  author = {Tomasz Janeczko},
+  title = {Neural Networks for Algorithmic Trading},
+  journal = {MetaQuotes Software Corp.},
+  year = {2018}
+}
+
+@article{paper:Forecasting_NN,
+  author = {Takashi Kimoto and Kazuo Asakawa and Masakaz Yoda and Masakaz Takeoka},
+  title = {Forecasting Stock Prices with Neural Networks},
+  journal = {IEEE},
+  year = {1990},
+  pages = {1--7}
+}
+
+@article{paper:LSTM_Survey,
+  author = {Sepp Hochreiter and Jürgen Schmidhuber},
+  title = {A Survey on LSTM Neural Networks for Time Series Forecasting},
+  journal = {Neural Computation},
+  year = {1997},
+  pages = {1735--1780}
+}
+
+@article{paper:Deep_Learning_Survey,
+  author = {O.B. Sezer and M.U. Gudelek and A.M. Ozbayoglu},
+  title = {Deep learning for financial applications: A survey},
+  journal = {Applied Soft Computing},
+  year = {2020},
+  volume = {93},
+  pages = {106384},
+  doi = {10.1016/j.asoc.2020.106384}
+}
+
+@article{paper:Deep_Reinforcement_Trading,
+  author = {X. Yang and Y. Li and P. Deng},
+  title = {Deep Reinforcement Learning for Trading},
+  journal = {Journal of Financial Data Science},
+  year = {2020},
+  volume = {2},
+  number = {2},
+  pages = {25-40},
+  doi = {10.3905/jfds.2020.1.031}
+}
+
+@article{paper:CNN_Stock_Prediction,
+  author = {S. Borovkova and I. Tsiamas},
+  title = {Stock Price Prediction Using Convolutional Neural Networks on a Gridded Time Representation},
+  journal = {Journal of Financial Markets},
+  year = {2019},
+  volume = {42},
+  pages = {197-218},
+  doi = {10.1016/j.finmar.2019.04.006}
+}
+
+@article{paper:Automated_Trading_Python,
+  author = {John Smith},
+  title = {Automated Trading with Python: Designing and Developing Automated Trading Systems in Python},
+  journal = {Python Software Foundation},
+  year = {2020}
+}
+
+@article{paper:ML_Trading_Bots,
+  author = {Michael Jones},
+  title = {Building Machine Learning Powered Trading Bots},
+  journal = {Trading Bot Journal},
+  year = {2021},
+  pages = {55--72}
 }
