--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -382,12 +382,28 @@ El usuario no tiene que poder introducir valores erróneos (intencionada o no in
 En lo relativo al \emph{DashBoard} hay formularios disponibles para agregar nuevos valores en cartera y para añadir nuevos valores en seguimiento. Y en cuanto al \emph{Lab} hay disponibles formularios para interactuar con los modelos ARIMA y para los algoritmos basados en ML. En todos los casos los métodos de control de errores se han diseñado para que sólo se permitan aquellos datos estrictamente correctos y se rechacen, informando al usuario, aquellos datos que no cumplan con las restricciones necesarias\footnote{Ver los métodos \texttt{DashBoard.views.\_hay\_errores()} y \texttt{Lab.views.\_comprobar\_formularios()}}.
 
 
-\section{Testing}
+\section{Testing, log de tests y algunos estadísticos relevantes}
 
 Desde el inicio del trabajo tenía claro que una de las facetas a cubrir era el testeo de las aplicaciones de forma ordenada. Cada aplicación, así como las utilidades, tienen sus propios tests por separado. Todas las pruebas se han estructurado de la misma manera en la que están distribuidos los directorios de las aplicaciones. Esto permite llevar un mejor control e ir incrementando las pruebas de manera casi natural. 
 
-Hay más de 220 tests, que dan una cobertura de código casi completa:
+Hay 250 tests, que dan una cobertura de código casi completa:
 
+\imagen{img_18_tests.png}{Número de tests realizados. Fuente: elaboración propia}{1}
+
+Las comprobaciones se han realizado con \texttt{coverage} y es posible encontrar una serie de plantillas HTML con información adicional. Dentro del directorio \textbf{htmlcov} se puede encontrar un archivo \textbf{index.html} que al ejecutarlo nos abrirá un informe con datos relevante sobre la cobertura de todo el proyecto. Aquí se muestra el resultado final de dicho informe: 
+
+\tablaSmall{Cobertura de código}
+{c|c|c|c|c}
+{tabla_coverage}
+{
+\rowcolor{gray!35}
+\textbf{Module} & \textbf{statements} & \textbf{missing} & \textbf{excluded} & \textbf{coverage} \\
+}
+{
+Total & 4094 & 7 & 0 & 100\% \\
+}
+
+Además, se puede comprobar un \emph{log}, que fui realizando para un mejor control y que guarda un comentario de todas aquellas pruebas que se van pasando. La estructura del \emph{log} se controla con un \emph{logger} y se pueden comprobar estos datos en el directorio \textbf{log}.
 
 Otras métricas relevantes de este trabajo son\footnote{Información extraída con \texttt{pygount} sin contar los archivos estáticos de \emph{Django} ni el directorio del entorno virtual}:
 
